--- a/sidebar/package.json
+++ b/sidebar/package.json
@@ -9,6 +9,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -25,9 +26,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "resolutions": {
-    "nth-check": "2.0.1"
   },
   "browserslist": {
     "production": [
